fix: close PR 5 readiness gaps